# SkernelNE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  makefile
lib/: Model.h  Utilities.h  Vocabulary.h
src/: Graph.cpp  Model.cpp  Node.cpp  Unigram.cpp  Vocabulary.cpp
tools/: learn_embs_classification.sh  learn_embs_classification_multikernel=3.sh  learn_embs_classification_multikernel=5.sh  perform_classification.sh
